# librefit

./: .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CLAUDE.md  README.MD  README.md  codecov.yml  eslint.config.js  eslint.conventions.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  coverage-rust.lcov  diesel.toml  icon-manifest.json  tauri.conf.json
src-tauri/android-templates/: AndroidManifest.xml  MainActivity.kt  README.md  activity_main.xml  build.gradle.kts  colors.xml  keystore.properties.template  setup-android.sh  themes.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.yml
src-tauri/migrations/2024-12-05-174159_init/: up.sql
src-tauri/migrations/2025-09-04-123922_add_performance_indexes/: down.sql  up.sql
src-tauri/migrations/2025-11-14-111026_rename_calorie_to_intake/: down.sql  up.sql
src-tauri/migrations/2025-11-14-122558_make_user_fields_mandatory/: down.sql  up.sql
src-tauri/migrations/2025-11-29-221316_add_time_to_trackers/: down.sql  up.sql
src-tauri/migrations/2025-11-30-111910_add_activity_level_to_body_data/: down.sql  up.sql
src-tauri/migrations/2025-11-30-161759_initial_schema/: down.sql  up.sql
src-tauri/migrations/2026-05-31-180000_add_workout_tracking/: down.sql  up.sql
src-tauri/res/: import.sql
src-tauri/src/: lib.rs  test_support.rs
src-tauri/src/calc/: wizard.rs
src-tauri/src/cmd/: mod.rs  seed.rs
src-tauri/src/crud/cmd/: body.rs  calorie.rs  dashboard.rs  error_handler.rs  food_category.rs  intake.rs  mod.rs  progress.rs  tracker_history.rs  user.rs  weight.rs  wizard.rs
src-tauri/src/crud/db/: connection.rs  model.rs  schema.rs
src-tauri/src/crud/db/comp/: mod.rs  (+3 more)
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/i18n/: localize.rs
src-tauri/src/service/: body.rs  dashboard.rs  export.rs  intake.rs  mod.rs  progress.rs  tracker_history.rs  user.rs  weight.rs  wizard.rs  workout.rs
src-tauri/src/service/export/: csv.rs  mod.rs  raw.rs
src-tauri/src/service/import/: csv.rs  mod.rs
src-tauri/src/util/: math_f32.rs  mod.rs
src-tauri/src/util/serde/: date.rs
src-tauri/tests/: test_cmd.rs  test_repo.rs  wizard.rs
src-tauri/tests/cmd/: README.md  mod.rs  test_body_cmd.rs  test_dashboard_cmd.rs  test_export_cmd.rs  test_import_cmd.rs  test_intake_cmd.rs  test_progress_cmd.rs  test_tracker_history_cmd.rs  test_user_cmd.rs  test_weight_cmd.rs  test_wizard_cmd.rs  test_workout_cmd.rs
src-tauri/tests/helpers/: mod.rs
src-tauri/tests/repo/: mod.rs  test_body_repo.rs  test_calories_repo.rs  test_food_category_repo.rs  test_intake_repo.rs  test_user_repo.rs  test_utilities.rs  test_weight_repo.rs  test_workout_metrics.rs
(+455 files in other folders)
