[package]
name = "librefit"
version = "0.1.0"
description = "Your FOSS calorie tracker!"
authors = ["Stefan Poindl"]
license = "GPL-3.0"
repository = "https://github.com/thwbh/librefit"
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "librefit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }
tauri-plugin-typegen = "0.1.3"

[dependencies]
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
tauri = { version = "2.2.3", features = [] }
tauri-plugin-log = { version = "2.2.0", features = ["colored"] }
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
chrono = "0.4.38"
validator = { version = "0.19.0", features = ["derive"] }
rust-i18n = "3.1.2"
libmath = "0.2.1"
tauri-plugin-fs = "2"
tauri-plugin-haptics = "2.3.0"

# satisfy linker for sqlite3 required by diesel
[dependencies.libsqlite3-sys]
version = "0.30.0"
features = [ "bundled" ]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

