[package]
name = "librefit"
version = "0.1.0"
description = "Your FOSS calorie tracker!"
authors = ["Stefan Poindl"]
license = "GPL-3.0"
repository = "https://github.com/thwbh/librefit"
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "librefit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }
tauri-typegen = "0.5.1"

[dependencies]
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.31"
tauri = { version = "2.11.2", features = ["test"] }
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
diesel = { version = "2.3.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = { version = "2.3.2", features = ["sqlite"] }
r2d2 = "0.8"
dotenv = "0.15.0"
chrono = "0.4.44"
validator = { version = "0.19.0", features = ["derive"] }
rust-i18n = "4.1.0"
libmath = "0.2.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-haptics = "2.3.2"
csv = "1.3"
zip = "8.6"
url = "2.5"

# satisfy linker for sqlite3 required by diesel
[dependencies.libsqlite3-sys]
version = "0.37.0"
features = [ "bundled" ]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

